--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "grunt": "^1.0.2",
     "grunt-serve": "^0.1.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "typed.js": "^2.0.6"
+  }
 }
